--- a/markup/dev/css/main.css
+++ b/markup/dev/css/main.css
@@ -345,7 +345,7 @@ template {
 .icon-dribble:before {
   content: "\e904"; }
 
-.navigation .navigation-drop .drop-content .nav-menu, .list-items, .products-block-wrapper .content-items, .carousel-section .carousel-items, .user-inf-wrapper .carousel-pg, .user-inf-content, .soc-icons {
+.navigation .navigation-drop .nav-menu, .list-items, .products-block-wrapper .content-items, .user-inf-wrapper .carousel-pg, .user-inf-content, .soc-icons {
   margin: 0;
   padding: 0;
   list-style: none; }
@@ -467,7 +467,13 @@ img {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  -webkit-transition: background 0.3s ease-in-out;
+  -o-transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out; }
+  .close-btn:hover {
+    background: #f7600e;
+    color: #fff; }
 
 @media (max-width: 767px) {
   .close-btn {
@@ -498,9 +504,6 @@ textarea {
 
 .caption-element {
   color: #f7600e; }
-
-h1, h2, h3 {
-  margin: 0 0 30px 0; }
 
 h1, .h1,
 h2, .h2,
@@ -584,203 +587,111 @@ p {
     font-size: 14px; } }
 
 blockquote {
-  margin: 0 30px;
+  margin: 0 100px;
   color: #fff;
   font-size: 25px;
   font-style: italic; }
+  blockquote cite {
+    padding-top: 40px; }
 
-.navigation {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer; }
-  .navigation-opener {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 30px;
-    height: 30px;
-    position: relative;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    z-index: 3; }
-    .navigation-opener-text {
-      display: block;
-      position: absolute;
-      left: -180%;
-      padding-right: 45px;
-      -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      -o-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; }
-    .navigation-opener:before {
-      content: '';
-      position: absolute;
-      top: 8px;
-      width: 20px;
-      height: 1px;
-      background: #fff;
-      display: block;
-      -webkit-transition: -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
-    .navigation-opener:after {
-      content: '';
-      position: absolute;
-      width: 20px;
-      height: 1px;
-      background: #fff;
-      display: block;
-      bottom: 7px;
-      -webkit-transition: -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
-    .navigation-opener-line {
-      display: block;
-      -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-      position: absolute;
-      width: 20px;
-      height: 1px;
-      background: #fff;
-      opacity: 1;
-      visibility: visible; }
-    .navigation-active .navigation-opener:after {
-      content: '';
-      -webkit-transform: rotate(-45deg);
-          -ms-transform: rotate(-45deg);
-              transform: rotate(-45deg);
-      top: 50%;
-      -webkit-transition: -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
-    .navigation-active .navigation-opener:before {
-      content: '';
-      -webkit-transform: rotate(45deg);
-          -ms-transform: rotate(45deg);
-              transform: rotate(45deg);
-      top: 50%;
-      -webkit-transition: -webkit-transform 0.3s ease-in-out;
-      transition: -webkit-transform 0.3s ease-in-out;
-      -o-transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out;
-      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
-    .navigation-active .navigation-opener-line {
-      opacity: 0;
-      visibility: hidden;
-      -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      -o-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; }
-    .navigation-active .navigation-opener-text {
-      opacity: 0;
-      visibility: hidden; }
-  .navigation .navigation-drop {
-    position: fixed;
+@media (max-width: 767px) {
+  blockquote q {
+    font-size: 16px; }
+  blockquote cite {
+    font-size: 18px; } }
+
+.navigation-opener {
+  width: 20px;
+  height: 30px;
+  position: relative;
+  z-index: 3;
+  display: block; }
+  .navigation-opener-text {
+    position: absolute;
+    right: 100%;
+    padding-right: 15px;
+    -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; }
+  .navigation-opener:before, .navigation-opener:after, .navigation-opener-line {
+    content: '';
+    position: absolute;
+    top: 8px;
     left: 0;
-    top: 0;
-    bottom: 0;
     right: 0;
-    height: 100vh;
-    -webkit-align-self: center;
-        -ms-flex-item-align: center;
-            align-self: center;
-    cursor: default;
-    -webkit-transform: translateX(100%);
-        -ms-transform: translateX(100%);
-            transform: translateX(100%);
-    -webkit-transition: -webkit-transform 0.3s ease-in-out;
-    transition: -webkit-transform 0.3s ease-in-out;
-    -o-transition: transform 0.3s ease-in-out;
-    transition: transform 0.3s ease-in-out;
-    transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
-    .navigation-active .navigation .navigation-drop {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-transform: translateX(0);
-          -ms-transform: translateX(0);
-              transform: translateX(0); }
-    .navigation .navigation-drop:after {
+    height: 1px;
+    background: #fff;
+    display: block;
+    -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+    -o-transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
+  .navigation-opener:after {
+    top: inherit;
+    bottom: 7px; }
+  .navigation-opener-line {
+    opacity: 1;
+    visibility: visible;
+    top: 50%; }
+  .navigation-active .navigation-opener:after, .navigation-active .navigation-opener:before {
+    content: '';
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: 50%; }
+  .navigation-active .navigation-opener:before {
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .navigation-active .navigation-opener-line, .navigation-active .navigation-opener-text {
+    opacity: 0;
+    visibility: hidden; }
+
+.navigation .navigation-drop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  height: 100vh;
+  cursor: default;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  text-align: center;
+  padding: 100px 15px;
+  overflow: auto; }
+  .navigation-active .navigation .navigation-drop {
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
+    background: #444a52; }
+  .navigation .navigation-drop .nav-menu {
+    padding-bottom: 115px;
+    z-index: 2;
+    position: relative;
+    font-size: 35px;
+    font-weight: 600;
+    text-transform: uppercase; }
+    .navigation .navigation-drop .nav-menu:after {
       content: '';
+      width: 170px;
+      height: 1px;
+      background-color: #f7600e;
       position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      background-color: #3b434c; }
-    .navigation .navigation-drop .drop-content {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-align-self: center;
-          -ms-flex-item-align: center;
-              align-self: center;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      z-index: 2; }
-      .navigation .navigation-drop .drop-content .nav-menu {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        text-align: center;
-        padding-bottom: 115px; }
-        .navigation .navigation-drop .drop-content .nav-menu:after {
-          content: '';
-          width: 170px;
-          height: 1px;
-          background-color: #f7600e;
-          margin: 55px auto 0 auto; }
-        .navigation .navigation-drop .drop-content .nav-menu li:not(:last-child) {
-          padding-bottom: 40px; }
-        .navigation .navigation-drop .drop-content .nav-menu li a {
-          font-size: 35px;
-          font-weight: 600;
-          text-transform: uppercase;
-          text-decoration: none; }
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      bottom: 70px; }
+    .navigation .navigation-drop .nav-menu li:not(:last-child) {
+      padding-bottom: 40px; }
 
 .navigation-active {
   overflow: hidden; }
@@ -939,8 +850,7 @@ blockquote {
   -webkit-background-size: 100% 100%;
           background-size: 100% 100%;
   padding: 100px 0 100px;
-  z-index: 0;
-  margin-bottom: 100px; }
+  z-index: 0; }
   .form-section:after {
     content: '';
     position: absolute;
@@ -995,7 +905,7 @@ blockquote {
       margin: 0; } }
 
 .company-products {
-  padding: 0 0 100px; }
+  padding: 100px 0 100px; }
 
 .products-block-wrapper {
   -webkit-box-orient: vertical;
@@ -1134,16 +1044,10 @@ blockquote {
   background-position: 50% 50%;
   -webkit-background-size: 100% 100%;
           background-size: 100% 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   padding: 100px 0;
   z-index: 0; }
+  .carousel-section .container {
+    display: block; }
   .carousel-section:after {
     content: '';
     position: absolute;
@@ -1154,69 +1058,6 @@ blockquote {
     background-color: #444a52;
     opacity: 0.9;
     z-index: -1; }
-  .carousel-section .carousel-items {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative; }
-    .carousel-section .carousel-items li {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center;
-      text-align: center; }
-      .carousel-section .carousel-items li .items-image {
-        padding-bottom: 45px; }
-      .carousel-section .carousel-items li .items-description blockquote q {
-        margin-bottom: 50px; }
-      .carousel-section .carousel-items li .items-description cite {
-        font-size: 18px;
-        display: block;
-        padding-top: 50px; }
-  .carousel-section .arrow-button {
-    position: absolute;
-    top: 55%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    text-decoration: none;
-    color: #767676;
-    font-size: 48px;
-    z-index: 2; }
-    .carousel-section .arrow-button:hover {
-      color: #f7600e; }
-  .carousel-section .right-arrow-button {
-    right: 15%; }
-  .carousel-section .left-arrow-button {
-    left: 15%; }
-
-@media (max-width: 767px) {
-  .carousel-section .carousel-items li .items-description blockquote q {
-    font-size: 16px; }
-  .carousel-section .arrow-button {
-    display: none; } }
-
-@media (max-width: 1600px) {
-  .carousel-section .right-arrow-button {
-    right: 10%; }
-  .carousel-section .left-arrow-button {
-    left: 10%; } }
-
-@media (max-width: 1330px) {
-  .carousel-section .right-arrow-button {
-    right: 0; }
-  .carousel-section .left-arrow-button {
-    left: 0; } }
 
 .send-section {
   position: relative;
@@ -1503,28 +1344,18 @@ blockquote {
   transition: visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
   -o-transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; }
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  display: block;
+  text-align: center; }
   .popup-active .popup {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
     position: fixed;
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     visibility: visible; }
   .popup .content-head {
-    padding-bottom: 45px; }
+    padding-bottom: 45px;
+    display: inline-block; }
     .popup .content-head p {
       margin-bottom: 0; }
   .popup form {
@@ -1545,6 +1376,10 @@ blockquote {
         border: 1px solid #c4c6c9; }
         .popup form .row .form-row-lg textarea:focus {
           border-color: #f7600e; }
+    .popup form .form-row-lg button:hover {
+      background: #f7600e;
+      color: #333;
+      border: 1px solid transparent; }
 
 @media (max-width: 1023px) {
   .popup {
@@ -1577,7 +1412,8 @@ blockquote {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  z-index: 2; }
   .soc-icons li {
     width: inherit; }
     .soc-icons li:not(:last-child) {
@@ -1607,21 +1443,54 @@ blockquote {
       color: #009bd5; }
 
 .slideshow {
-  position: relative; }
+  position: relative;
+  text-align: center; }
+  .slideshow .slide .items-image {
+    padding-bottom: 45px; }
+  .slideshow .slide .items-description blockquote cite {
+    display: block; }
+  .slideshow .btn-prev, .slideshow .btn-next {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    text-decoration: none;
+    color: #767676;
+    font-size: 48px;
+    z-index: 2;
+    width: 50px;
+    height: 50px; }
+    .slideshow .btn-prev i, .slideshow .btn-next i {
+      -webkit-transition: color 0.3s ease-in-out;
+      -o-transition: color 0.3s ease-in-out;
+      transition: color 0.3s ease-in-out;
+      display: block; }
+      .slideshow .btn-prev i:hover, .slideshow .btn-next i:hover {
+        color: #f7600e; }
+  .slideshow .btn-prev {
+    left: 0; }
+  .slideshow .btn-next {
+    right: 0; }
 
 .slideshow .slide {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%; }
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  right: 0; }
 
 .slideshow .slide.active {
   z-index: 2; }
 
-.slideshow.not-enough-slides .btn-prev,
-.slideshow.not-enough-slides .btn-next {
+.slideshow.not-enough-slides .btn-prev, .slideshow.not-enough-slides .btn-next {
   visibility: hidden; }
+
+@media (max-width: 767px) {
+  .slide .image-description blockquote q {
+    font-size: 16px; }
+  .carousel-section .arrow-button {
+    display: none; } }
 
 .wrapper {
   position: relative;
