--- a/markup/dev/scss/base/_buttons.scss
+++ b/markup/dev/scss/base/_buttons.scss
@@ -78,6 +78,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @include animate(background);
+
+  &:hover {
+    background: $orange;
+    color: $white;
+  }
 }
 
 @include media("<phone") {
