--- a/markup/dev/scss/components/_carousel-section.scss
+++ b/markup/dev/scss/components/_carousel-section.scss
@@ -3,10 +3,12 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: 100% 100%;
-  display: flex;
-  justify-content: center;
   padding: 100px 0;
   z-index: 0;
+
+  .container {
+    display: block;
+  }
 
   &:after {
     content: '';
@@ -18,102 +20,6 @@
     background-color: #444a52;
     opacity: 0.9;
     z-index: -1;
-  }
-
-  .carousel-items {
-    display: flex;
-    position: relative;
-    @extend %listreset;
-
-    li {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-
-      .items-image {
-        padding-bottom: 45px;
-      }
-
-      .items-description {
-
-        blockquote {
-          
-          q {
-            margin-bottom: 50px;
-          }
-
-        }
-
-        cite {
-          font-size: 18px;
-          display: block;
-          padding-top: 50px;
-        }
-
-      }
-
-    }
-
-  }
-
-  .arrow-button {
-    position: absolute;
-    top: 55%;
-    transform: translateY(-50%);
-    text-decoration: none;
-    color: #767676;
-    font-size: 48px;
-    z-index: 2;
-
-    &:hover {
-      color: $orange;
-    }
-
-  }
-
-  .right-arrow-button {
-    right: 15%;
-  }
-
-  .left-arrow-button {
-    left: 15%;
-  }
-
-}
-
-@include media("<phone") {
-  
-  .carousel-section .carousel-items li .items-description blockquote q {
-    font-size: 16px;
-  }
-
-  .carousel-section .arrow-button {
-    display: none;
-  }
-
-}
-
-@media (max-width: 1600px) {
-
-  .carousel-section .right-arrow-button {
-    right: 10%;
-  }
-
-  .carousel-section .left-arrow-button {
-    left: 10%;
-  }
-
-}
-
-@media (max-width: 1330px) {
-  
-  .carousel-section .right-arrow-button {
-    right: 0;
-  }
-
-  .carousel-section .left-arrow-button {
-    left: 0;
   }
 
 }
