--- a/markup/dev/scss/components/_popup.scss
+++ b/markup/dev/scss/components/_popup.scss
@@ -8,11 +8,10 @@
     transform: translate(-50%, 500%);
     visibility: hidden;
     @include animate(transform visibility);
+    display: block;
+    text-align: center;
 
     .popup-active & {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         position: fixed;
         transform: translate(-50%, -50%);
         visibility: visible;
@@ -20,6 +19,7 @@
 
     .content-head {
         padding-bottom: 45px;
+        display: inline-block;
 
         p {
             margin-bottom: 0;
@@ -57,6 +57,20 @@
                         border-color: $orange;
                     }
 
+                }
+
+            }
+            
+        }
+
+        .form-row-lg {
+
+            button {
+                
+                &:hover {
+                    background: $orange;
+                    color: $black;
+                    border: 1px solid transparent;
                 }
 
             }
