--- a/markup/dev/scss/components/_slideshow.scss
+++ b/markup/dev/scss/components/_slideshow.scss
@@ -1,15 +1,112 @@
 .slideshow {
     position: relative;
+    text-align: center;
+
+    .slide {
+
+        .items-image {
+            padding-bottom: 45px;
+        }
+
+        &.active {
+
+        }
+
+        .items-description {
+
+            blockquote {
+
+                cite {
+                    display: block;
+                }
+
+            }
+
+        }
+
+    }
+
+    .btn-prev, .btn-next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        text-decoration: none;
+        color: #767676;
+        font-size: 48px;
+        z-index: 2;
+        width: 50px;
+        height: 50px;
+
+        i {
+          @include animate(color);
+          display: block;
+    
+            &:hover {
+              color: $orange;
+            }
+
+        }
+    
+      }
+
+      .btn-prev {
+        left: 0;
+      }
+
+      .btn-next {
+        right: 0;
+      }
+
  }
  
- .slideshow .slide {
-    display: flex;
-    width: 100%;
- }
- .slideshow .slide.active {
-    z-index: 2;
- }
- .slideshow.not-enough-slides .btn-prev,
- .slideshow.not-enough-slides .btn-next {
+ .slideshow {
+
+    .slide {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        right: 0;
+    }
+
+}
+
+ .slideshow {
+
+    .slide.active {
+        z-index: 2;
+    }
+
+}
+
+ .slideshow.not-enough-slides {
+
+  .btn-prev, .btn-next {
     visibility: hidden
  }
+
+}
+
+ @include media("<phone") {
+  
+    .slide {
+
+        .image-description {
+
+            blockquote {
+
+                q {
+                    font-size: 16px;
+                }
+
+            }
+
+        }
+
+    }
+  
+    .carousel-section .arrow-button {
+      display: none;
+    }
+  
+  }
