--- a/markup/dev/scss/components/_soc-icons.scss
+++ b/markup/dev/scss/components/_soc-icons.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     padding-bottom: 30px;
     @extend %listreset;
+    z-index: 2;
   
     li {
       width: inherit;
