--- a/markup/dev/scss/main.scss
+++ b/markup/dev/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'components/content-head';
 @import 'components/soc-icons';
 @import 'components/slideshow';
+@import 'components/carousel-prof';
 
 
 // layouts
