--- a/markup/dev/scss/components/_prof-section.scss
+++ b/markup/dev/scss/components/_prof-section.scss
@@ -1,156 +1,14 @@
 .user-inf-section {
   padding: 100px 0;
-}
 
-.user-inf-wrapper {
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  .container {
+    display: block;
 
-  .carousel-pg {
-    display: flex;
-    @extend %listreset;
-
-    li:not(:last-child) {
-      padding-right: 10px;
+    .content-head {
+      margin: 0 auto;
+      padding: 0;
     }
 
-    li {
-
-      a {
-        display: block;
-        width: 10px;
-        height: 10px;
-        background-color: #c4c6c9;
-        border-radius: 50%;
-        @include animate(background-color transform);
-
-        &:hover {
-          background-color: $orange;
-          transform: scale(1.2);
-        }
-
-      }
-
-    }
-
-  }
-
-}
-
-.user-inf-content {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  padding-bottom: 100px;
-  @extend %listreset;
-
-  .user-info-item {
-    width: 25%;
-    padding: 0 20px 15px 20px;
-
-    a {
-      text-decoration: none;
-      display: block;
-    }
-
-    &:hover {
-
-      .item-image {
-        transform: scale(1.1);
-        transform-origin: bottom;
-        filter: initial;
-        @include animate(filter transform transform-origin);
-
-        &:after {
-          content: '';
-          width: 100%;
-          border-bottom: 5px solid $orange;
-          position: absolute;
-          bottom: 15px;
-          border-radius: 10px;
-          @include animate(border);
-        }
-
-      }
-
-      .soc-icons {
-        filter: initial;
-      }
-
-      .item-description {
-
-        h3 {
-          color: $black;
-          @include animate(color);
-        }
-
-        p {
-          color: $black;
-          @include animate(color);
-        }
-
-      }
-
-    }
-
-    .item-image {
-      width: 100%;
-      padding-bottom: 15px;
-      position: relative;
-      filter: grayscale(100%);
-      @include animate(transform transform-origin filter);
-
-      img {
-        width: 100%;
-        display: block;
-      }
-
-    }
-
-    .item-description {
-
-      h3 {
-        text-transform: uppercase;
-        font-size: 25px;
-        font-weight: $h3-weight;
-        text-align: center;
-        color: #c4c6c9;
-        @include animate(color);
-      }
-
-      p {
-        text-align: center;
-        color: #c4c6c9;
-        font-size: 14px;
-        @include animate(color);
-      }
-
-    }
-
-    .soc-icons {
-      filter: grayscale(100%);
-      @include animate(filter color background-color);
-    }
-
-  }
-
-}
-
-@include media("<tablet") {
-
-  .user-inf-content .user-info-item {
-    width: 50%;
-    padding: 0 15px 15px 15px;
-  }
-
-}
-
-@include media("<phone") {
-
-  .user-inf-content .user-info-item {
-    width: 100%;
-    padding: 0 0 15px 0;
   }
 
 }
